syntax="proto3";

package events;
option go_package = "github.com/clubo-app/clubben/protobuf/events";

import "profile/profile.proto";
import "party/party.proto";
import "google/protobuf/timestamp.proto";

message ProfileCreated {
    profile.Profile profile = 1;
}
// id must always be defined but for the rest just define the properties that got updated
message ProfileUpdated {
    profile.Profile profile = 1;
}
message UserDeleted {
    string id = 1;
}

message PartyCreated {
    party.Party party = 1;
}

message PartyUpdated { 
    party.Party party = 1;
}

message FriendRemoved {
  string user_id = 1;
  string friend_id = 2;
}

message FriendRequested {
  string user_id = 1;
  string friend_id = 2;
  google.protobuf.Timestamp requested_at = 3; 
}

message FriendCreated {
  string user_id = 1;
  string friend_id = 2;
  google.protobuf.Timestamp accepted_at = 3; 
}

message PartyFavorited {
  string user_id = 1;
  string party_id = 2;
  google.protobuf.Timestamp favorited_at= 3; 
}

message PartyUnfavorited {
  string user_id = 1;
  string party_id = 2;
  google.protobuf.Timestamp unfavorited_at= 3; 
}
